# sloos-analysis-by-oh

./: .gitignore  EXECUTIVE_SUMMARY.md  README.md  REAL_DATA_IMPLEMENTATION.md  SAMPLE_DATA_REMOVAL.md  app.py  bedrock_client.py  data_ingestion.py  database.py  download_real_sloos_data.py  main.py  pyproject.toml  run.sh  take_screenshots.py  update_sloos_data.sh
screenshots/: README.md
